# ChangeLog for sci-physics/geant
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/ChangeLog,v 1.69 2013/01/21 17:17:25 bicatali Exp $

  21 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> geant-4.9.6.ebuild:
  Fixed the environment file when the data use flag is enabled, bug #453224
  thanks Oliver Freyermuth

*geant-4.9.5_p02 (14 Dec 2012)
*geant-4.9.6 (14 Dec 2012)

  14 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> +geant-4.9.5_p02.ebuild,
  +geant-4.9.6.ebuild, -geant-4.9.2_p02.ebuild, -geant-4.9.5-r1.ebuild,
  -geant-4.9.5_p01.ebuild, metadata.xml:
  Version bumps. Tests are not in tar ball anymore. Might have to re-apply patch
  for data environment variables

  24 Oct 2012; Ulrich Müller <ulm@gentoo.org> geant-3.21.14-r2.ebuild,
  geant-3.21.14-r3.ebuild, geant-4.9.2_p02.ebuild, geant-4.9.5-r1.ebuild,
  geant-4.9.5_p01.ebuild:
  Update dependency after package move from x11-libs/openmotif to
  x11-libs/motif.

  16 Oct 2012; Justin Lecher <jlec@gentoo.org> geant-3.21.14-r2.ebuild,
  geant-3.21.14-r3.ebuild, geant-4.9.2_p02.ebuild, geant-4.9.4_p03.ebuild,
  geant-4.9.5-r1.ebuild, geant-4.9.5_p01.ebuild:
  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
  updated fortran-2.eclass

  04 Jul 2012; Jeff Horelick <jdhore@gentoo.org> geant-4.9.4_p03.ebuild:
  marked x86 per bug 420295

  16 Jun 2012; Agostino Sarubbo <ago@gentoo.org> geant-4.9.4_p03.ebuild:
  Stable for amd64, wrt bug #420295

  20 May 2012; Benda Xu <heroxbd@gentoo.org> geant-4.9.5-r1.ebuild,
  geant-4.9.5_p01.ebuild:
  I have massed up the keywords and Changelog with blind rsync with my overlay.
  This is just a fix.

  20 May 2012; Benda Xu <heroxbd@gentoo.org> +geant-4.9.5-r1.ebuild,
  +files/geant-4.9.5_p01-scripts-only-dataenv.patch,
  files/geant-4.9.5-scripts-only-dataenv.patch:
  add back geant-4.9.5-r1.ebuild because geant-python cannot function correctly