@@ -25,18 +25,20 @@ DIST geant321_3.21.14.dfsg-9.diff.gz 47589 SHA256 419bc2315e2692fe84b353d445cbae
 DIST geant321_3.21.14.dfsg.orig.tar.gz 10922928 SHA256 186fe98a08ad1de39f68698a09a46e7c2f14c37b22f8f990257b0bd66215c5b4 SHA512 733a77e529ecfe17c35d1e0bf44cf9062dbd9f2e3880e12cbfabf7372e6c60ea9690df010574094b44aef6fe306dfd85dfd4f42641b8f03efda3938a50313734 WHIRLPOOL fc2b230e1bf2ae1157cf9c92f474ff72fc1f3158e5db5a8f1a7d4f7c983fae9b886dc1aeb148019cb961bc602abc629d75a1aa728d66b10887daa45de040def6
 DIST geant4.9.4.p03.tar.gz 25241424 SHA256 5090ca5b506238f16ba2ae2176221a18b6fde06f91180850a109fae1006910c0
 DIST geant4.9.5.p02.tar.gz 28491693 SHA256 adb04fce9472228bb10d78cbc7f40493bfb37454beee22e7c80d630646cd3777 SHA512 0081ecdae0b61d8790a7083691d17e3d7727f8c065f412a94d61e2c01ae27d9585d7d91059795da251a34d7305cc04e17eb37d189df8b52f68974c3290272ad6 WHIRLPOOL ce36ba544f18484b6a2b8ffd19b68f126578177806a77a3aa55981254afd8b59a1567b654111879529a31be8e92e5ddf8da46dabc49ad447b40dee8a8f012e3b
+DIST geant4.9.6.p01.tar.gz 25450720 SHA256 575c45029afc2405d70c38e6dcfd1a752564b2540f33a922230039be81c8e4b6 SHA512 8cb773e42b446c2716a0c09c6381fd45b37200fc7a69a33c68f72968165adf91e5b4254252e8b12b1b8d309912a6c7f73ed2f065b08e1c067a862e03e105cc9c WHIRLPOOL 2e7a6665bffe5bbed9a2d3876f934f5afd181d68115ad34bbc7bf71f9d29c5fb3877c18fcbbf30be4db3db415aeb25d001a8b0eae131cdb154f45732377f0280
 DIST geant4.9.6.tar.gz 25433109 SHA256 3b1caf87664ef35cab25563b2911653701e98c75a9bd6c64f364d1a1213247e5 SHA512 54b2622da86d669728719958dcbcc52dfe58ca2e5ed2d7f43d10b032e4a732363fe54a359417b33c471b29708c6733cb4e3afeda746cc1d3bdec72d0c1df1a19 WHIRLPOOL 892db0b4cae7ffa8c51279ae64d0cc366fe953eca406b2c8f55352a39bab9c80f5b8564a771211c95c3789d70c3d8f092b44e3a61b4cd2515c3e151cae6e8ecd
 EBUILD geant-3.21.14-r2.ebuild 1863 SHA256 280320afafaed437cb867022573df8db82440fe432ad65da970fb960efcd0b9a SHA512 49d0dbe37041d311f2e7f4180ae22c44855504ad93750abc442be931d916bcdae756c4de144610802bc166dd415bb032fc81aeeacab4f1b6f36b10c72392ca14 WHIRLPOOL a67420977142aa5572b9807b31ad739346b30fc8f45eedf2a69eb54b07d13845e66d1eb02f84b91bccb5c0a4e5280d8152298f705f08e5ac85f1ba54d026aaed
 EBUILD geant-3.21.14-r3.ebuild 1690 SHA256 05a1337ee41d67fcb5283efd7fff00c53ec257036e38a5af6115fca75e450688 SHA512 47149caab3dbca468591616d2c3a99c8b7b012e95e6f62e8c3a5853ee6f7ff9f1d49da46c9bd2b9e49140dc017c96ea25e4ad224b16946fcbfaed92be83b68be WHIRLPOOL a49f8f6f4403808e2127bd4babfa73fed5a517d94b7822b1b2de14eb46981e3e9e410ff7f348c558395fa8710fd997f4e280a0cadef4efe349a4061fad633ce5
 EBUILD geant-4.9.4_p03.ebuild 2377 SHA256 f836adf68676439be4e6c155ca39bc5ca7c220954c6156a7e8a007cf930eda3a SHA512 fb08dede3c779b1d547aba9a6a45f5f8bdcb8f1fbf8aad3921d80da271c4d366103dd12291c2a6759d814d7348ecb8386dca265216c6ab467300136438bfcb8f WHIRLPOOL e0d05c95f0d333934a7df2622801d1c6c12de0dee54bdce268760e64445cde94fad5aa85d429c80a540adccfc34bf6b42a7e40fac855ef4e11a9f1dc5dd723fd
 EBUILD geant-4.9.5_p02.ebuild 2996 SHA256 3385d13a2ebcd717ad2a9decf2880b74d981f09426132d78886a4867309df45f SHA512 9a8200ee0f1cfa4d8b5467d9cdb7a748782b91d31719df9c9e20d96cac9c75a39a1b3e21696ac53ae154f77a5f517756ad89ebb4c9282005e73fd63bf8526146 WHIRLPOOL 294967b4cf419788e4b23d56479dafd3e9a25ac0c5cbe22be8da0faf1f223add291e8e1051831f8c563abc13f0d66b59fe0b64823b99cc6bd3646cefb5c701e9
 EBUILD geant-4.9.6.ebuild 2899 SHA256 3a9f23ca205aa2e93113218c5b6c9b84117c9e44f8b053a10ead63c726b5065a SHA512 4ed711a728f32a267c12d9391f79bccb23de50ae0ae6c7197a8588dc8cf71213c163c3a9d19961017cc40269ea4d503d5fac413e1fcedb3ad4ece70ecfa152c3 WHIRLPOOL 718e8d3b672d50e8d1ced86fa60a4ad7f4ba13dcefac505955ee1ace94100f7ff010b2e373691a6b2218e898992f8a9dce493a0cd56ef840c3b1d2ebefff6a82
-MISC ChangeLog 13575 SHA256 3f3bdeafbecbe95a90bec67059c5fc50a6c4e59b897423b1ffdf8321fb575137 SHA512 67a995b0d7773fcf9610ccbe866811929f2f045216788d89378b29cb3ecdc6afe89cb7106dd379dcac8deeedb28b82fb7ff155cdc82eeb2d1a6f06864c9b3371 WHIRLPOOL dab9474358fdf7c8497024bcdb92f8159caa98bcccfee260df7f9123eaad6588c84804b6c821affd81cd866d01bae1ca673cc5cdea2f31e6ca7e85dcdac4ab38
+EBUILD geant-4.9.6_p01.ebuild 2903 SHA256 f29f8c256d9e9e0df3a14735501a6a51dbc5bb8019f9c5907716347e2aaac548 SHA512 63ff49df949fe2868f8c1824a336b7e9bf7ee55d7c2dc2d49019c94b521cabe396eda126d55ae497429dad7bc11775c84f1d7f075d552675200f2ebf0e7b05d5 WHIRLPOOL d399ca43b7ca1266d2b716a0d986f3c27c3a78209d0adc2c5807e6ca655b8dc5c69f62b6e53c3ed2e457524c790583b53741868ce1fe9e83b317b9730ba1e9a9
+MISC ChangeLog 13703 SHA256 4b580fc6ed32fa825b8541ce0eca9db2fe9b14fde5a91fdf8244bd51e30b1ce8 SHA512 7f588bb563c1410ed02243382b5f539b881917a5b34f45295fbbd74f9be608a5bc5fbee7a556b1bc6f3f3bf6cbda89c0b3f152651d29773bcea6866a5e3dbad6 WHIRLPOOL a86df062471d0732ee4ece53ac9b9e060c1f226b652a744ce7b413a7c803b4452d3293773cad14482127e00415cd91cfbd10afaabfefe8c37aa33b86b6629184
 MISC metadata.xml 1559 SHA256 1998a5c57e775d84d17cb91f0b5865c95f3a00572b3eba51dfc339398b05c503 SHA512 1ab29ce2cf1b8bdd848eb6d6c3df567df001026ad1d26b9c55880a9239b7593eae3b8fd13a7b55f9110b9869b69f486fd11ec7e0964b1b307e8d9a5a308a7ae7 WHIRLPOOL d5e49493699cb2545ee624600ebdd13fbb4a64ff4402cc491784739ef86b19a0701fc03bb153191830519e0a4d9a0d7eb8350cfed7664504ca7beea71e602288
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlD9eCkACgkQ1ycZbhPLE2AjcwCgrafnsxbtuZ0nv1HDPAbo8vpO
-UrEAoIF9w5V6Vk90M9bbU152jEfBi1i3
-=IRZy
+iEYEAREIAAYFAlEq8pMACgkQ1ycZbhPLE2A2zgCfZqp5a8AlpdVU/zf5OiInccEl
+cqMAoJFtHz+kKIaIIYFVz+TFHeCnPe9o
+=1Rwq
 -----END PGP SIGNATURE-----
